--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#008000" />
     <link rel = "icon" href = "images/heart.png" type = "image/x-icon"> 
 </head>
-<body>
+<body style="background-color: darkcyan;">
 <div class="container">
     <br/><br/><br/><br/><br/><br/>
     <div class="col-xs-6 col-xs-offset-3">
